<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gedarovich.picsearcher.MainActivity">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:padding="16dp"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pixabayBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/pixabay"/>

            <LinearLayout
                android:id="@+id/searchBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/colorGray"
                android:orientation="horizontal"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/searchBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:padding="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/searchIcon"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/magnifier"/>

                    <EditText
                        android:id="@+id/searchText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/searchPrompt"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:padding="4dp"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textColor="@color/colorGray"
                        android:background="@null"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:text="@string/searchButton"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/rounded_corners"/>

            <TextView
                android:id="@+id/credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/colorGray"
                android:contentDescription="pixabayLogo"
                android:padding="8dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
